syntax = "proto3";

package api.qycms_bff.web.v1;
import "google/api/annotations.proto";
import  "google/protobuf/timestamp.proto";
option go_package = "github.com/iwinder/qingyucms/api/qycms_bff/web/v1;v1";
option java_multiple_files = true;
option java_package = "api.qycms_bff.web.v1";

service QyWebArticle {
	rpc CreateQyWebArticle (CreateQyWebArticleRequest) returns (CreateQyWebArticleReply);
	rpc UpdateQyWebArticle (UpdateQyWebArticleRequest) returns (UpdateQyWebArticleReply);
	rpc DeleteQyWebArticle (DeleteQyWebArticleRequest) returns (DeleteQyWebArticleReply);
	// 查看文章详情
	rpc GetQyWebArticle (GetQyWebArticleRequest) returns (GetQyWebArticleReply){
		option (google.api.http) = {
			get: "/api/web/v1/article/{name}",
		};
	};
	rpc ListQyWebArticle (ListQyWebArticleRequest) returns (ListQyWebArticleReply){
		option (google.api.http) = {
			get: "/api/web/v1/article",
		};
	};
	rpc GetQyWebTag (GetQyWebTagRequest) returns (GetQyWebTagReply){
		option (google.api.http) = {
			get: "/api/web/v1/tag/{name}",
		};
	};
	rpc GetQyWebCategory (GetQyWebCategoryRequest) returns (GetQyWebCategoryReply){
		option (google.api.http) = {
			get: "/api/web/v1/category/{name}",
		};
	};
	rpc ListQyWebArticleResources (ListQyWebArticleResourcesRequest) returns (ListQyWebArticleResourcesReply){
		option (google.api.http) = {
			get: "/api/web/v1/article/resources",
		};
	};
	rpc GetQyWebMinaArticle (GetQyWebArticleRequest) returns (GetQyWebMinaArticleReply){
		option (google.api.http) = {
			get: "/api/web/v1/mina/article/{name}",
		};
	};
	rpc ListQyWebMinaArticle (ListQyWebArticleRequest) returns (ListQyWebArticleReply){
		option (google.api.http) = {
			get: "/api/web/v1/mina/article",
		};
	};
}

message WebArticlePageInfo {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
}

message WebCategoryResponse {
	string name =2;
	string identifier =3;
}
message WebTagsResponse {
	string name =2;
	string identifier =3;
}

message WebArticleInfoResponse {
	string title= 2;
	string permaLink= 3;
	string canonicalLink= 4;
	string summary= 5;
	string thumbnail= 6;
	int32 statusFlag = 8;
	int32  atype = 9;
	uint64 authorId = 10;
	WebCategoryResponse category = 11;
	uint64 commentAgentId = 12;
	bool published = 13;
	int32 viewCount = 14;
	int32 likeCount = 15;
	int32 hateCount = 16;
	string contentHtml = 18;
	google.protobuf.Timestamp publishedAt = 19;
	string nickName = 20;
	repeated WebTagsResponse tags = 21;
	bool commentFlag = 22;
	int32 commentCount = 23;
	repeated WebArticleResourcesResponse resources = 24;
}
message WebMinaArticleInfoResponse {
	string title= 2;
	string permaLink= 3;
	string canonicalLink= 4;
	string summary= 5;
	string thumbnail= 6;
	int32 statusFlag = 8;
	int32  atype = 9;
	uint64 authorId = 10;
	WebCategoryResponse category = 11;
	uint64 commentAgentId = 12;
	bool published = 13;
	int32 viewCount = 14;
	int32 likeCount = 15;
	int32 hateCount = 16;
	string contentHtml = 18;
	google.protobuf.Timestamp publishedAt = 19;
	string nickName = 20;
	repeated WebTagsResponse tags = 21;
	bool commentFlag = 22;
	int32 commentCount = 23;
	string content = 24;
}
message CreateQyWebArticleRequest {}
message CreateQyWebArticleReply {}

message UpdateQyWebArticleRequest {}
message UpdateQyWebArticleReply {}

message DeleteQyWebArticleRequest {}
message DeleteQyWebArticleReply {}

message GetQyWebArticleRequest {
	string name = 1;
}
message GetQyWebArticleReply {
	WebArticleInfoResponse data = 1;
}
message GetQyWebMinaArticleReply {
	WebMinaArticleInfoResponse data = 1;
}
message GetQyWebTagRequest {
	string name = 1;
}
message GetQyWebTagReply {
	WebTagsResponse data = 1;
}
message GetQyWebCategoryRequest {
	string name = 1;
}
message GetQyWebCategoryReply {
	WebCategoryResponse data = 1;
}

message ListQyWebArticleRequest {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
	string searchText = 7;
	string categoryName = 8;
	string  tagName = 9;
}
message ListQyWebArticleReply {
	WebArticlePageInfo pageInfo = 1;
	repeated WebArticleInfoResponse items = 2;
}

message ListQyWebArticleResourcesRequest {
	string permaLink = 1;
}
message WebArticleResourcesResponse {
	string name = 7;
	string url = 8;
	string password = 9;
}
message ListQyWebArticleResourcesReply {
	repeated WebArticleResourcesResponse items = 1;
}